--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,93 +1,51 @@
 annotated-types==0.6.0
-anyio==3.7.1
+anyio==4.3.0
 astroid==3.1.0
-blinker==1.7.0
-blis==0.7.11
-boto3==1.34.90
-botocore==1.34.90
-catalogue==2.0.10
+bcrypt==4.1.3
 certifi==2024.2.2
-charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.16.0
 colorama==0.4.6
-confection==0.1.4
-cymem==2.0.8
 dill==0.3.8
-distlib==0.3.8
-distro==1.9.0
 dnspython==2.6.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+email_validator==2.1.1
 exceptiongroup==1.2.1
-filelock==3.13.3
-Flask==3.0.3
-Flask-Cors==4.0.0
-fsspec==2024.3.1
+fastapi==0.111.0
+fastapi-cli==0.0.3
 h11==0.14.0
 httpcore==1.0.5
+httptools==0.6.1
 httpx==0.27.0
 idna==3.7
-importlib_metadata==7.1.0
 iniconfig==2.0.0
-intel-openmp==2021.4.0
 isort==5.13.2
-itsdangerous==2.2.0
-Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.4.0
-langcodes==3.4.0
-language_data==1.2.0
-marisa-trie==1.1.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
-mkl==2021.4.0
+mdurl==0.1.2
 motor==3.4.0
-mpmath==1.3.0
-murmurhash==1.0.10
-networkx==3.3
-nltk==3.8.1
-numpy==1.26.4
-openai==1.3.6
+orjson==3.10.3
 packaging==24.0
-pipenv==2023.12.1
-platformdirs==4.2.0
+platformdirs==4.2.1
 pluggy==1.5.0
-preshed==3.0.9
-pydantic==2.7.0
-pydantic_core==2.18.1
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.18.0
 pylint==3.1.0
-pymongo==4.7.0
-pytest==8.1.2
-python-dateutil==2.9.0.post0
+pymongo==4.7.2
+pytest==8.2.0
 python-dotenv==1.0.1
-regex==2024.4.16
-requests==2.31.0
-s3transfer==0.10.1
-scikit-learn==1.4.2
-scipy==1.13.0
-simplepokedex==1.0.3
-six==1.16.0
-smart-open==6.4.0
+python-multipart==0.0.9
+PyYAML==6.0.1
+rich==13.7.1
+shellingham==1.5.4
 sniffio==1.3.1
-spacy==3.7.4
-spacy-experimental==0.6.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-strictjson==4.0.0
-sympy==1.12
-tbb==2021.12.0
-thinc==8.2.3
-threadpoolctl==3.4.0
+starlette==0.37.2
 tomli==2.0.1
 tomlkit==0.12.4
-torch==2.3.0
-tqdm==4.66.2
-typer==0.9.4
+typer==0.12.3
 typing_extensions==4.11.0
-urllib3==2.2.1
-virtualenv==20.25.1
-wasabi==1.1.2
-weasel==0.3.4
-Werkzeug==3.0.2
-zipp==3.18.1
+ujson==5.9.0
+uvicorn==0.29.0
+watchfiles==0.21.0
+websockets==12.0
