--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,6 +39,7 @@ Pygments==2.18.0
 pylint==3.1.0
 pymongo==4.7.2
 pytest==8.2.0
+pytest-asyncio==0.23.6
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
