--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,12 @@ astroid==3.1.0
 bcrypt==4.1.3
 certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coverage==7.5.1
 cryptography==42.0.7
+defusedxml==0.7.1
 dill==0.3.8
 dnspython==2.6.1
 ecdsa==0.19.0
@@ -14,6 +17,7 @@ email_validator==2.1.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.3
+genbadge==1.1.1
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -29,6 +33,7 @@ mdurl==0.1.2
 motor==3.4.0
 orjson==3.10.3
 packaging==24.0
+pillow==10.3.0
 platformdirs==4.2.1
 pluggy==1.5.0
 pyasn1==0.6.0
@@ -44,6 +49,7 @@ python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 PyYAML==6.0.1
+requests==2.31.0
 rich==13.7.1
 rsa==4.9
 shellingham==1.5.4
@@ -55,6 +61,7 @@ tomlkit==0.12.4
 typer==0.12.3
 typing_extensions==4.11.0
 ujson==5.9.0
+urllib3==2.2.1
 uvicorn==0.29.0
 watchfiles==0.21.0
 websockets==12.0
