--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -48,13 +48,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
             name: coverage
-            path: coverage.xml
+            path: ./backend/coverage.xml
 
       - name: Commit Coverage Report
         if: github.event_name == 'push'
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git add coverage.xml
+          git add ./backend/coverage.xml
           git commit -m "Auto update coverage report"
           git push
