fix badge workflow

--- a/.github/workflows/coveragebadge.yml
+++ b/.github/workflows/coveragebadge.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install genbadge
-        run: pip install genbadge
+        run: pip install genbadge[coverage]
 
       - name: Generate Coverage Badge
         run: genbadge coverage -i ./backend/coverage.xml -o ./backend/coverage-badge.svg
