--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.9.1",
+    "@mantine/core": "^7.9.2",
     "@mantine/form": "^7.9.1",
-    "@mantine/hooks": "^7.9.1",
+    "@mantine/hooks": "^7.9.2",
+    "@mantine/tiptap": "^7.9.2",
     "@tabler/icons-react": "^3.3.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-subscript": "^2.4.0",
+    "@tiptap/extension-superscript": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "manthemes": "^1.2.3-alpha.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
